[package]
name = "urlfinder-rs"
version = "0.1.0"
edition = "2021"
authors = ["seaung"]
description = "A fast and comprehensive tool for extracting URLs and sensitive information from web pages"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1.34", features = ["full"] }
regex = "1.10"
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
handlebars = "4.5"
csv = "1.3"
rayon = "1.8"
